--- a/app/src/main/res/layout/layout_desejo_list.xml
+++ b/app/src/main/res/layout/layout_desejo_list.xml
@@ -11,7 +11,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_weight="8"
-        android:text="Capitão América"
+        android:text="AAAAAAA"
         android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />
 
     <TextView
