--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,6 +21,7 @@
             android:id="@+id/editTextName"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:padding="15dp"
             android:layout_marginBottom="8dp"
             android:layout_marginTop="8dp"
             android:hint="Nome" />
@@ -29,6 +30,7 @@
             android:id="@+id/editTextDesejo"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:padding="15dp"
             android:layout_marginBottom="8dp"
             android:layout_marginTop="8dp"
             android:hint="Seu Desejo" />
@@ -37,9 +39,8 @@
         <Spinner
             android:id="@+id/spinnerPrioridade"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="8dp"
-            android:layout_marginTop="8dp"
+            android:layout_height="60dp"
+
             android:entries="@array/teams" />
 
 
